# CA

./: .gitattributes  .gitignore  CA-Types.csv  CA-Types.md  README.md  batch_report.md  generator.md  main.py  pyproject.toml  repo-plan.md
A-New-Kind-of-Science/BACK-MATTER/Colophon/: Colophon.md
A-New-Kind-of-Science/BACK-MATTER/Index/: Index.md
A-New-Kind-of-Science/CHAPTERS/11-The-Notion-of-Computation/: The-Notion-of-Computation.md
A-New-Kind-of-Science/CHAPTERS/12-The-Principle-of-Computational-Equivalence/: The-Principle-of-Computational-Equivalence.md
A-New-Kind-of-Science/CHAPTERS/2-The-Crucial-Experiment/: The-Crucial-Experiment.md
A-New-Kind-of-Science/CHAPTERS/3-The-World-of-Simple-Programs/: The-World-of-Simple-Programs.md
context/: REFACTOR_CA.md  REFACTOR_TARGET.md  handoff_contract.md  pe-atlas.md  pe-questions.md  plan.md
pe/: alphabets.py  datasets.py  evals.py  frontiers.py  loci.py  neighborhoods.py  rules.py  scaffold.py  seeds.py
ref/A-New-Kind-of-Science/: A-New-Kind-of-Science.md  ANKoS-Atlas.md
ref/notes/: CA-Types.md  alphabets.md  ca-scaffold.py  generator.md  index.md  numpy-target.md  rollout.md  rule-counting.md  selector-derivatives.md
ref/notes/archived/: V2.md
ref/roadmap/: README.md  alphabets.py  frontiers.py  rules.py  seeds.py
src/ca/: __init__.py  alphabets.py  boundary.py  frontiers.py  loci.py  neighborhoods.py  rng.py  rollout.py  rules.py  scaffold.py  seeds.py  specs.py
tests/: test_boundary.py  test_loci.py  test_neighborhoods.py  test_rng.py  test_rollout.py  test_rules.py  test_seeds.py  test_specs.py
(+24 files in other folders)
