[project]
name = "ankos"
version = "0.1.0"
description = "A New Kind of Science cellular automata library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2",
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ca"
